--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ dist/
 # dependencies
 node_modules/
 
+
 # logs
 npm-debug.log*
 yarn-debug.log*
@@ -19,3 +20,6 @@ pnpm-debug.log*
 
 # macOS-specific files
 .DS_Store
+
+# calude
+.claude
